Move <pre> padding to the prettify desert skin to avoid an extra space for the first character.

--- a/stylesheets/filer.css
+++ b/stylesheets/filer.css
@@ -8,7 +8,6 @@ body p {
 }
 
 pre,code {
-    padding: 0.5em;
     border-radius: 5px;
     text-shadow: none;
     margin: 1em auto;
